Fixes a couple visual issues with popouts, and one with the compat checker modal (#800)
- Compat checker text is no longer squished on Chrome
- Popout sticky header is positioned correctly
- Popout no longer loses height if too narrow

--- a/packages/frontend/src/compatchecker.less
+++ b/packages/frontend/src/compatchecker.less
@@ -20,10 +20,7 @@ compat-checker-overview-modal {
   }
 
   .description {
-    // why does this work
-    display: table-caption;
-    width: 100%;
-    padding-bottom: 10px;
+    .non-expanding-block;
   }
 
   table {
